Fix PlayerListEntry healthbar overflow past 100%

--- a/code/UI/PlayerList/PlayerListEntry.razor.scss
+++ b/code/UI/PlayerList/PlayerListEntry.razor.scss
@@ -33,6 +33,7 @@ PlayerListEntry {
         border: 2px black;
         flex-direction: column;
         justify-content: center;
+        overflow: hidden;
 
         .fill {
             transition: all 750ms ease-in-out;
